examples/test/testpolicy13706.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13706
  namespace: namespace217
spec:
  podSelector:
    matchLabels:
      key5: value45
      key42: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value15
          key34: value22
      podSelector:
        matchLabels:
          key16: value43
          key9: value28
